[package]
name = "gust-cn"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["技术支持：临来笑笑生 <luck@elapse.date>"]


# www.gust.cn站点     2024.03.21   临来笑笑生
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://crates.io/
